[package]
name = "subcat"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
futures = "0.3"
jsonrpsee-ws-client = { git = "https://github.com/paritytech/jsonrpsee", rev = "6a15f75b12eda33bf0ee26efa9f1bca58ebb53a2" }
jsonrpsee = { git = "https://github.com/paritytech/jsonrpsee", rev = "6a15f75b12eda33bf0ee26efa9f1bca58ebb53a2" }
jsonrpsee-core = { git = "https://github.com/paritytech/jsonrpsee", rev = "6a15f75b12eda33bf0ee26efa9f1bca58ebb53a2" }
# pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
# pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
tokio = { version = "1.16", features = ["full"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
tokio-stream = { version = "0.1", features = ["sync"] }
serde_json = { version = "1.0.93" }
serde = { version = "1.0.152" }
console-subscriber = "0.1.8"


codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
    "derive",
    "full",
    "bit-vec",
] }
hex = "0.4.3"

subxt = { git = "https://github.com/paritytech/subxt", rev = "6d3c377c16a5e8f61dc264ebef36b8db5e593ba1", features = [
    "substrate-compat", "jsonrpsee-ws"
] }
sp-keyring = "18.0.0"
sp-core = { version = "16.0.0", default-features = false }
sp-runtime = "18.0.0"

# sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
# sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
# sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
